attempt to fix DT-2001, fix spacing below images for Windows phone

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -608,6 +608,7 @@
         max-height: 170px;
         height: auto;
         width: 100%;
+        max-width: 100%;
         img {
             max-height: 150px;
             width: auto;
@@ -623,8 +624,6 @@
 @media only screen and (max-width : 768px) and (min-width : 480px) {
     .summary-table .cell--image {
         max-width: 50px;
-
-
     }
 }
 
